ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS = -I$(top_srcdir)/src/simulator -I$(top_srcdir)/src/simulator/subsystems
AM_MAKEFLAGS = --no-print-directory

MANPAGES = ABM.7 \
	   Numerical.7 \
	   ROOT-Sim.7 \
	   Topology.7 \
	   AddVisit.3 \
	   CapabilityAvailable.3 \
	   ComputeMinTour.3 \
	   CountAgents.3 \
	   CountPastVisits.3 \
	   CountVisits.3 \
	   DataAgent.3 \
	   DirectionsCount.3 \
	   EnqueueVisit.3 \
	   Expent.3 \
	   FindReceiver.3 \
	   FindReceiverToward.3 \
	   Gamma.3 \
	   GetNeighbourInfo.3 \
	   GetPastVisit.3 \
	   GetReceiver.3 \
	   GetValueTopology.3 \
	   GetVisit.3 \
	   IterAgents.3 \
	   KillAgent.3 \
	   NeighboursCount.3 \
	   Normal.3 \
	   OnGVT.3 \
	   Poisson.3 \
	   ProcessEvent.3 \
	   Random.3 \
	   RandomRange.3 \
	   RandomRangeNonUniform.3 \
	   RegionsCount.3 \
	   RemoveVisit.3 \
	   ROOT-Sim.3 \
	   ScheduleNewEvent.3 \
	   ScheduleNewLeaveEvent.3 \
	   SetState.3 \
	   SetValueTopology.3 \
	   SetVisit.3 \
	   SpawnAgent.3 \
	   TrackNeighbourInfo.3 \
	   Zipf.3


man_MANS = $(MANPAGES)


